<resources>
    <string name="app_name">智慧医疗</string>
    <!--<string name="cancel">取消</string>-->
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <!--<string name="app_name">日期选择控件</string>-->
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="email">邮箱</string>
    <string name="phone">手机</string>
    <string name="error_invalid_phone">手机格式不正确</string>>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登 录</string>
    <string name="action_register">注 册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此处必填</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="verification">验证码</string>
    <string name="title_activity_settings">Settings</string>
    <string name="identify">身份证号码</string>
    <string name="user_name">姓名</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="sendVerification">发送验证码</string>
    <string name="visit">就诊</string>
    <string name="medicalRecord">病历</string>
    <string name="personalInformation">个人信息</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="common_input_pwd_title">请输入支付密码</string>
    <string name="common_withdraw_prompt1">提现成功后，</string>
    <string name="common_withdraw_prompt2">个工作日之内钱款会打到您的微信钱包</string>
    <string name="common_cancel">取消</string>
    <string name="common_certain">确定</string>
    <string name="common_choose_month">选择月份</string>
    <string name="common_pay_info">付款详情</string>
    <string name="common_cn_yuan">元</string>
    <string name="common_need_to_pay">需要支付的金额</string>
    <string name="common_wx_pay">微信支付</string>
    <string name="common_wx_pay_context">推荐安装微信的用户使用</string>
    <string name="common_ali_pay">支付宝支付</string>
    <string name="common_ali_pay_context">推荐安装支付宝的用户使用</string>
    <string name="common_balance_pay">余额支付</string>
    <string name="common_balance_pay_context">使用现金余额支付，当前余额</string>
    <string name="common_balance_not_enough_context">余额不足，当前余额</string>
    <string name="common_pay">确认付款</string>
</resources>
