<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".Activity.RegisterActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layout_height="400dp"
        android:background="@drawable/doctor_shape"
        android:orientation="vertical">
        <EditText
            android:id="@+id/registerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:inputType="textPersonName"
            android:hint="@string/user_name" />

        <EditText
            android:id="@+id/registerID"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/identify" />

        <EditText
            android:id="@+id/registerPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:inputType="phone"
            android:hint="@string/phone" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:hint="密码" />



        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:orientation="horizontal">-->
            <!--<EditText-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/verification"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:inputType="number"-->
                <!--android:ems="6"-->
                <!--android:hint="@string/verification"/>-->
            <!--<Button-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/sendVerification"-->
                <!--android:ems="2"-->
                <!--android:id="@+id/sendVerification"-->
                <!--android:clickable="true"-->
                <!--android:background="@drawable/qmui_list_item_bg_with_double_border_pressed"/>-->
        <!--</LinearLayout>-->


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/registerCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_selector" />

            <Button
                android:id="@+id/registerSure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/sure"
                android:background="@drawable/button_selector" />

        </LinearLayout>

    </LinearLayout>




</LinearLayout>